--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "bigint": "^0.4.2",
     "bufferpack": "0.0.6",
     "console-stamp": "^0.1.6",
-    "event": "^1.0.0",
+    "events": "^1.0.0",
     "express": "^4.12.3",
     "mysql": "^2.6.2",
     "q": "^1.3.0",
