--- a/package.json
+++ b/package.json
@@ -2,15 +2,16 @@
   "name": "ao-chat",
   "version": "1.0.0",
   "description": "",
-  "main": "bot.js",
+  "main": "main.js",
   "dependencies": {
-    "base85": "*",
+    "base85": "1.4.28",
     "bigint": "^0.4.2",
     "bufferpack": "0.0.6",
     "console-stamp": "^0.1.6",
-    "events": "^1.0.0",
+    "events": "^1.0.2",
     "express": "^4.12.3",
     "mysql": "^2.6.2",
+    "prompt": "^0.2.14",
     "q": "^1.3.0",
     "request": "^2.57.0",
     "underscore": "^1.8.3",
@@ -21,6 +22,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC"
+  "author": "Nepherius",
+  "license": "MIT"
 }
