--- a/package.json
+++ b/package.json
@@ -1,27 +1,42 @@
 {
-  "name": "ao-chat",
+  "name": "Nephbot",
   "version": "1.0.0",
-  "description": "",
-  "main": "main.js",
+  "description": "Anarchy Online Chat Bot",
+  "main": "start.js",
   "dependencies": {
-    "base85": "1.4.28",
-    "bigint": "^0.4.2",
-    "bufferpack": "0.0.6",
-    "console-stamp": "^0.1.6",
-    "events": "^1.0.2",
-    "express": "^4.12.3",
-    "mysql": "^2.6.2",
-    "prompt": "^0.2.14",
-    "q": "^1.3.0",
-    "request": "^2.57.0",
-    "underscore": "^1.8.3",
-    "underscore.string": "^3.0.3",
-    "xml2js": "^0.4.8"
+	"base85": "*",
+	"bigint": "^0.4.2",
+	"bufferpack": "0.0.6",
+	"buffertools": "^2.1.2",
+	"console-stamp": "^0.1.6",
+	"events": "^1.0.2",
+	"express": "^4.12.3",
+	"mysql": "^2.6.2",
+	"prompt": "^0.2.14",
+	"q": "^1.3.0",
+	"request": "^2.57.0",
+	"underscore": "^1.8.3",
+	"underscore.string": "^3.0.3",
+	"xml2js": "^0.4.8"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Nepherius/Nephbot"
+  },
+  "keywords": [
+    "Anarchy",
+    "Online",
+    "Nephbot",
+    "Chat",
+    "Bot"
+  ],
   "author": "Nepherius",
-  "license": "MIT"
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/Nepherius/Nephbot/issues"
+  },
+  "homepage": "https://github.com/Nepherius/Nephbot"
 }
