--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"console-stamp": "^0.1.6",
 	"events": "^1.0.2",
 	"express": "^4.12.3",
+	"moment": "^2.10.3",
 	"mysql": "^2.6.2",
 	"prompt": "^0.2.14",
 	"q": "^1.3.0",
