--- a/package.json
+++ b/package.json
@@ -1,42 +1,41 @@
 {
-  "name": "nephbot",
-  "version": "1.0.0",
-  "description": "Anarchy Online Chat Bot",
-  "main": "start.js",
-  "dependencies": {
-    "base85": "https://github.com/Nepherius/base85/tarball/master",
-    "bignum": "^0.10.2",
-    "bufferpack": "0.0.6",
-    "console-stamp": "^0.1.6",
-    "events": "^1.0.2",
-    "express": "^4.12.3",
-    "moment": "^2.10.3",
-    "mysql": "^2.6.2",
-    "prompt": "^0.2.14",
-    "q": "^1.3.0",
-    "request": "^2.57.0",
-    "underscore": "^1.8.3",
-    "underscore.string": "^3.0.3",
-    "xml2js": "^0.4.8"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Nepherius/Nephbot.git"
-  },
-  "keywords": [
-    "Anarchy",
-    "Online",
-    "Chat",
-    "Bot",
-    "Nephbot"
-  ],
-  "author": "Nepherius",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/Nepherius/Nephbot/issues"
-  },
-  "homepage": "https://github.com/Nepherius/Nephbot#readme"
+    "name": "Nephbot",
+    "version": "1.0",
+    "description": "Anarchy Online Chat Bot",
+    "main": "start.js",
+    "dependencies": {
+        "agenda": "^0.9.0",
+        "base85": "^2.1.0",
+        "bluebird": "^3.4.6",
+        "express": "^4.14.0",
+        "lodash": "^4.17.2",
+        "moment": "^2.17.1",
+        "mongoose": "^4.7.2",
+        "prompt": "^1.0.0",
+        "request": "^2.79.0",
+        "rfr": "^1.2.3",
+        "winston": "^2.3.0",
+        "winston-daily-rotate-file": "^1.4.0",
+        "xml2js": "^0.4.17"
+    },
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Nepherius/Nephbot.git"
+    },
+    "keywords": [
+        "Anarchy",
+        "Online",
+        "Chat",
+        "Bot",
+        "Nephbot"
+    ],
+    "author": "Nepherius",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/Nepherius/Nephbot/issues"
+    },
+    "homepage": "https://github.com/Nepherius/Nephbot#readme"
 }
